kustomize/whoami/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  labels:
    app: whoami
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: whoami.infra.rwx.im
    http:
      paths:
      - backend:
          service: 
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - infra.rwx.im
      secretName: infra-rwx-im-tls
