kustomize/whoami/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`whoami.infra.rwx.im`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
    services:
    - name: whoami
      kind: Service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`whoami.infra.rwx.im`)
    kind: Rule
    services:
    - name: whoami
      kind: Service
      port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: infra-rwx-im-tls
